--- a/japanese/intro-ja.html
+++ b/japanese/intro-ja.html
@@ -37,11 +37,11 @@
     <!--main-->
     <main>
         <h1>学校紹介</h1>
-        <h2>本学の概要</h2>
-        <p>本学では国際的に活躍でき、世界に通用するようなマネジメント能力を持つ人材の育成に 力を入れています。また人種や門地に問わず学習意欲が熱心な若者を応援します。
+        <h2>本校の概要</h2>
+        <p>本校では国際的に活躍でき、世界に通用するようなマネジメント能力を持つ人材の育成に 力を入れています。また人種や門地に問わず学習意欲が熱心な若者を応援します。
         </p>
         <h2>マネジメント能力の育成</h2>
-        <p>本学では豊かなマネジメント能力を鍛えるために独自のカリキュラムや積極的な実習を行います。 実践的な力を養い、世界に通用するような水準まであなたの能力を引き上げます。
+        <p>本校では豊かなマネジメント能力を鍛えるために独自のカリキュラムや積極的な実習を行います。 実践的な力を養い、世界に通用するような水準まであなたの能力を引き上げます。
         </p>
         <h2>インターナショナルスクール</h2>
         <p>私たちは国際的な学生を教育することを目指します。 普段から英語に触れ、様々な人種、特に日本人とフランス人とが同じ空間で勉学をともにします。 早くから多国籍な人種がいる環境があることで刺激の多い3年間を過ごすことが出来ます。
@@ -72,9 +72,31 @@
             </tbody>
         </table>
         <h2>学校遍歴</h2>
-        <h2>年中行事</h2>
+          <p>本校はロンドン日本人スクールを改装して誕生しました。それまでは日本人のための学校でしたが、
+            国際的な人材の育成を目指してインターナショナルスクールとして10年前に生まれ変わりました。</p>
         <h2>クラブ</h2>
-        <h2>1年間の予定</h2>
+          <p>本校ではクラブ活動にも力を入れており、以下のクラブ活動を実施しています。高校3年間の素敵な青春の日々を約束します</p>
+          <h3>運動系</h3>
+            <p>・サッカー(男)(女)</p>
+            <p>・クリケット(男)(女)</p>
+            <p>・バスケットボール(男)(女)</p>
+          <h3>文化系</h3>
+            <p>・吹奏楽部</p>
+            <p>・合唱団</p>
+            <p>・世界文化研究会</p>
+            <p>・ボードゲーム研究会</p>
+            <p>・ボランティア</p>
+        <h2>年中行事</h2>
+          <p>・入学式(9月)</p>
+          <p>・体育祭(10月)</p>
+          <p>・留学生との交流会(12月)</p>
+          <p>・中間テスト(1月)</p>
+          <p>・遠足(3月)</p>
+          <p>・ホームカミングデー(3月)</p>
+          <p>・学期末テスト(5月)</p>
+          <p>・卒業式(6月)</p>
+          <p>・長期休み(6月から9月)</p>
+          <p>・海外ホームステイ(7月)</p>
     </main>
 
     <!--フッター-->
