--- a/english/access-en.html
+++ b/english/access-en.html
@@ -35,7 +35,46 @@
         </nav>
     </header>
     <!--メイン-->
-    <main class="page-main"></main>
+    <main class="page-main">
+      <h1>How to access</h1>
+      <div class="access">
+        <h2>For people coming by transportation</h2>
+        <p>Located in Acton, West London Ealing London.
+           Located approximately 45 minutes from central London. The area is very secure and many foreigners live there.</p>
+        <table border="1">
+          <tbody>
+            <tr>
+              <th rowspan="3">From central London</th>
+              <td>From King's Cross Station, a 4-minute walk from St. Pancras Station,
+                  take Piccadilly Line to Ealing Common Station</td>
+            </tr>
+            <tr>
+              <td>From Kings Cross Station, a 4 minutes walk from St. Pancras Station,
+                  take Piccadilly line to Holborn station.
+                  Change to Central Line to West Acton Station</td>
+            </tr>
+            <tr>
+              <td>From Kings Cross Station, a 4 minutes walk from St. Pancras Station,
+                  take the Victoria line to Oxford Circus station.
+                  Change to Central Line to West Acton Station</td>
+            </tr>
+            <tr>
+              <th>From the airport</th>
+              <td>From Hatton Cross Station, a 3 minute walk from Heathrow Airport,
+                  take Piccadilly Line to Ealing Common Station</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      <div class="figure">
+        <img src="../img/access/access.jpg" alt="図">
+      </div>
+      <div class="map">
+        <h2>School location</h2>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4010.3314678545985!2d-0.2827834859472339!3d51.51414552059801!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f20!3m3!1m2!1s0x48760e001303304f%3A0xb1ae25fda0c30ea9!2z44Ot44Oz44OJ44Oz5pel5pys5Lq65a2m5qCh!5e0!3m2!1sja!2sfr!4v1583744827474!5m2!1sja!2sfr"
+                  width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+      </div>
+    </main>
     <!--フッター-->
     <footer class="page-footer"></footer>
 </body>
