--- a/english/intro-en.html
+++ b/english/intro-en.html
@@ -35,7 +35,76 @@
         </nav>
     </header>
     <!--メイン-->
-    <main class="page-main"></main>
+    <main class="page-main">
+      <h1>School introduction</h1>
+      <h2>Overview of our school</h2>
+      <p>
+        Our school is committed to developing human resources who can play an active role internationally and have world-class management skills.
+        We support young people who are eager to learn, regardless of race or gate.
+      </p>
+      <h2>Development of management skills</h2>
+      <p>
+        The school offers unique curriculum and active training in order to develop rich management skills.
+        We develop practical skills and raise your abilities to a world-class level.
+      </p>
+      <h2>International School</h2>
+      <p>
+        We aim to educate international students. You usually speak English and various races, especially Japanese and French,
+        study together in the same space.You can spend three years with a lot of stimulation because of the environment where
+        there are multinational races from an early stage.
+      <h2>Breakdown of students</h2>
+      <table>
+          <tbody>
+              <tr>
+                  <td></td>
+                  <td>men</td>
+                  <td>women</td>
+              </tr>
+              <tr>
+                  <td>First grade</td>
+                  <td>55 people</td>
+                  <td>47 people</td>
+              </tr>
+              <tr>
+                  <td>Second grade</td>
+                  <td>52 people</td>
+                  <td>44 people</td>
+              </tr>
+              <tr>
+                  <td>Third grade</td>
+                  <td>50 people</td>
+                  <td>49 people</td>
+              </tr>
+          </tbody>
+      </table>
+      <h2>School itinerary</h2>
+        <p>Our school was renovated from a Japanese school in London. Until then, it was a school for Japanese people,
+           but it was reborn 10 years ago as an international school with the aim of developing international human resources.</p>
+      <h2>Club activities</h2>
+        <p>The school also focuses on club activities and carries out the following club activities.
+          We promise youthful days of high school for three years</p>
+        <h3>Athletic club activities</h3>
+          The following clubs are all male and female
+          <p>・Soccer</p>
+          <p>・Cricket</p>
+          <p>・Basketball</p>
+        <h3>Cultural club activities</h3>
+          <p>・Brass band</p>
+          <p>・Choir</p>
+          <p>・World culture study Group</p>
+          <p>・Volunteer</p>
+      <h2>Annual event</h2>
+        <p>・Entrance ceremony(September)</p>
+        <p>・Sports festival(October)</p>
+        <p>・Exchange meeting with international students(December)</p>
+        <p>・Intermediate test(January)</p>
+        <p>・Excursion(March)</p>
+        <p>・Homecoming day(March)</p>
+        <p>・term-end exam(May)</p>
+        <p>・Graduation ceremony(June)</p>
+        <p>・Long vacation(from June to September)</p>
+        <p>・Overseas homestay(July)</p>
+    </main>
     <!--フッター-->
     <footer class="page-footer"></footer>
 </body>
