--- a/japanese/content-ja.html
+++ b/japanese/content-ja.html
@@ -2,85 +2,100 @@
 <html lang="ja">
 
 <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/header.css">
-    <link rel="stylesheet" href="../css/style-ja.css">
-    <title>教育内容</title>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="../css/reset.css">
+  <link rel="stylesheet" href="../css/header.css">
+  <link rel="stylesheet" href="../css/style-ja.css">
+  <link rel="stylesheet" href="../css/content-ja.css">
+  <title>教育内容</title>
 </head>
 
 <body>
-    <!--ヘッダー-->
-    <header class="page-header">
-        <div class="page-header__SchoolMark">
-            <div class="SchoolMark__logo">
-                <img src="../img/SchoolMark2.png" alt="SchoolMark">
-            </div>
-        </div>
-        <div class="page-header__lang">
-            <button class="lang-EN" type="button" onclick="en()">　</button>
-            <button class="lang-JP" type="button" onclick="ja()">　</button>
-            <button class="lang-FR" type="button" onclick="fr()">　</button>
-        </div>
-        <nav class="page-header__menu">
-            <ol>
-                <li class="menu-index menu" id="header-menu-index"><a href="index-ja.html">ホーム</a></li>
-                <li class="menu-intro menu" id="header-menu-intro"><a href="intro-ja.html">学校紹介</a></li>
-                <li class="menu-content menu" id="header-menu-content"><a href="content-ja.html">教育内容</a></li>
-                <li class="menu-facility menu" id="header-menu-facility"><a href="facility-ja.html">学校設備</a></li>
-                <li class="menu-ex menu" id="header-menu-ex"><a href="entranceExamination-ja.html">入試</a></li>
-                <li class="menu-access menu" id="header-menu-access"><a href="access-ja.html">アクセス</a></li>
-                <li class="menu-inquiry menu" id="header-menu-inquiry"><a href="inquiry-ja.html">お問い合わせ</a></li>
-            </ol>
-        </nav>
-    </header>
-    <!--メイン-->
-    <main class="page-main"><h1>教育内容</h1>
-      <div class="content">
+  <!--ヘッダー-->
+  <header class="page-header">
+    <div class="page-header__SchoolMark">
+      <div class="SchoolMark__logo">
+        <img src="../img/SchoolMark2.png" alt="SchoolMark">
+      </div>
+    </div>
+    <div class="page-header__lang">
+      <button class="lang-EN" type="button" onclick="en()">　</button>
+      <button class="lang-JP" type="button" onclick="ja()">　</button>
+      <button class="lang-FR" type="button" onclick="fr()">　</button>
+    </div>
+    <nav class="page-header__menu">
+      <ol>
+        <li class="menu-index menu" id="header-menu-index"><a href="index-ja.html">ホーム</a></li>
+        <li class="menu-intro menu" id="header-menu-intro"><a href="intro-ja.html">学校紹介</a></li>
+        <li class="menu-content menu" id="header-menu-content"><a href="content-ja.html">教育内容</a></li>
+        <li class="menu-facility menu" id="header-menu-facility"><a href="facility-ja.html">学校設備</a></li>
+        <li class="menu-ex menu" id="header-menu-ex"><a href="entranceExamination-ja.html">入試</a></li>
+        <li class="menu-access menu" id="header-menu-access"><a href="access-ja.html">アクセス</a></li>
+        <li class="menu-inquiry menu" id="header-menu-inquiry"><a href="inquiry-ja.html">お問い合わせ</a></li>
+      </ol>
+    </nav>
+  </header>
+  <!--メイン-->
+  <main class="inner">
+    <div class="page-main">
+      <div class="page-main__header">
+        <h1 class="page-submain__header">教育内容</h1>
+      </div>
+      <div class="page-main__content">
         <p>本校では教育にも力を入れています。以下に授業の一部を掲載します。</p>
-        <p>
-          <h2><u>共通科目</u></h2>
-          <img src="../img/content/text.jpg" alt="共通科目">
-          全学年で共通科目の学習をします。2年次、3年次の基盤となるものなので、1年次には教師陣が
-          特に力を入れています。しっかりついてきてください。<br clear="left">
-        </p>
-        <p>
-          <h2><u>法</u></h2>
-          <img src="../img/content/law.jpg" alt="法">
-          法についても学びます。<br clear="left">
-        </p>
-        <p>
-          <h2><u>マーケティング</u></h2>
-          <img src="../img/content/marketing.jpg" alt="マーケティング">
-          マネジメントの基本であるマーケティングについて学びます。マーケティングと聞くと
-          難しいと感じるかもしれませんが、本校教師が自信を持って分かりやすく説明します。<br clear="left">
-        </p>
-        <p>
-          <h2><u>ファイナンス</u></h2>
-          <img src="../img/content/finance.jpg" alt="ファイナンス">
-          やはり、金融に関しても抑えておかないといけません。みんなお金好きだよね？
-          経済の回し方を知り、お金を上手に扱えるようになりましょう。<br clear="left">
-        </p>
-        <p>
-          <h2><u>プログラミング</u></h2>
-          <img src="../img/content/prog.jpg" alt="プログラミング">
-          「プログラミング能力がその人の能力」と言われるほど、非常に重要な授業です。
-          初歩的なところから始めて少しづつ難しくなりますが、共に頑張りましょう。<br clear="left">
-        </p>
-        <p>
-          <h2><u>e-ビジネス</u></h2>
-          <img src="../img/content/e-business.jpg" alt="e-ビジネス">
-          今の時代、e-ビジネスは必須です。言葉くらいは聞いたことがあるのでは？
-          本校では、2年前からe-ビジネスの授業を取り入れました。<br clear="left">
-        </p>
-      </div>
-      <div class="figure">
-        <img src="../img/content/figure.jpg" alt="図">
-      </div>
-    </main>
 
-    <!--フッター-->
-    <footer class="page-footer"></footer>
+          <div class="intro-section__content">
+            <div class="intro-section__block" id="content1">
+              <div class="intro-section__img-area"></div>
+              <div class="intro-section__txt-area">
+                <h2>共通科目</h2>
+                <p>全学年で共通科目の学習をします。2年次、3年次の基盤となるものなので、1年次には教師陣が特に力を入れています。しっかりついてきてください。</p>
+              </div>
+            </div>
+            <div class="intro-section__block" id="content2">
+              <div class="intro-section__img-area"></div>
+              <div class="intro-section__txt-area">
+                <h2>法</h2>
+                <p>法についても学びます。</p>
+              </div>
+            </div>
+            <div class="intro-section__block" id="content3">
+              <div class="intro-section__img-area"></div>
+              <div class="intro-section__txt-area">
+                <h2>マーケティング</h2>
+                <p>マネジメントの基本であるマーケティングについて学びます。マーケティングと聞くと難しいと感じるかもしれませんが、本校教師が自信を持って分かりやすく説明します。</p>
+              </div>
+            </div>
+            <div class="intro-section__block" id="content4">
+              <div class="intro-section__img-area"></div>
+              <div class="intro-section__txt-area">
+                <h2>フィアナンス</h2>
+                <p>やはり、金融に関しても抑えておかないといけません。みんなお金好きだよね？経済の回し方を知り、お金を上手に扱えるようになりましょう。</p>
+              </div>
+            </div>
+            <div class="intro-section__block" id="content5">
+              <div class="intro-section__img-area"></div>
+              <div class="intro-section__txt-area">
+                <h2>プログラミング</h2>
+                <p>「プログラミング能力がその人の能力」と言われるほど、非常に重要な授業です。初歩的なところから始めて少しづつ難しくなりますが、共に頑張りましょう。</p>
+              </div>
+            </div>
+            <div class="intro-section__block" id="content6">
+              <div class="intro-section__img-area"></div>
+              <div class="intro-section__txt-area">
+                <h2>e-ビジネス</h2>
+                <p>今の時代、e-ビジネスは必須です。言葉くらいは聞いたことがあるのでは？本校では、2年前からe-ビジネスの授業を取り入れました。</p>
+              </div>
+            </div>
+          </div>
+        </div>
+          <div class="gairyaku">
+            <img src="../img/content/figure.jpg" alt="図" class="zu">
+          </div>
+  </main>
+
+  <!--フッター-->
+  <footer class="page-footer"></footer>
 </body>
 <script src="../header.js"></script>
 
