--- a/japanese/intro-ja.html
+++ b/japanese/intro-ja.html
@@ -37,18 +37,17 @@
   </header>
   <!--main-->
   <main>  
-    <div class="effect-fade">
-      <div class="page-main__header">
-        <h1 class="page-submain__header">学校紹介</h1>
+    <div class="page-main__header">
+      <h1 class="page-submain__header">学校紹介</h1>
+    </div>
+    <div class="history">
+      <div class="contents-head">
+        <h2>学校遍歴</h2>
       </div>
-      <div class="history">
-        <div class="contents-head">
-          <h2>学校遍歴</h2>
-        </div>
-        <p>本校はロンドン日本人スクールを改装して誕生しました。<br>
-          それまでは日本人のための学校でしたが、<br>
-          国際的な人材の育成を目指してインターナショナルスクールとして10年前に生まれ変わりました。
-      </div>
+      <p>本校はロンドン日本人スクールを改装して誕生しました。<br>
+        それまでは日本人のための学校でしたが、<br>
+        国際的な人材の育成を目指してインターナショナルスクールとして10年前に生まれ変わりました。
+      </p>
     </div>
     
     <div class="overview">
@@ -153,4 +152,5 @@
   </footer>
 </body>
 <script src="../header.js"></script>
+<script src="../effct-fade.js"></script>
 </html>
