--- a/english/index-en.html
+++ b/english/index-en.html
@@ -35,7 +35,54 @@
         </nav>
     </header>
     <!--メイン-->
-    <main class="page-main"></main>
+    <main class="page-main">
+      <div class="page-main__header">
+          <h1 class="page-main__header1">Welcome to</h1>
+          <h1 class="page-main__header2">London Management School</h1>
+      </div>
+      <div class="page-main__content">
+          <section class="content-news content">
+              <h2 class="content-news__header">NEWS</h2>
+          </section>
+          <section class="content-contents content">
+              <h2 class="content-contents__header">CONTENTS</h2>
+          </section>
+      </div>
+      <div class="news">
+        <p>March 11, 2020</p>
+        <p>Entrance Examination　about school entrance examination for corona virus</p>
+        <p>March 11, 2020</p>
+        <p>News　About emporary school closure</p>
+        <p>March 10, 2020</p>
+        <p>News　About stop excursion</p>
+        <p>March 06, 2020</p>
+        <p>Event　About postponement of lecture ,History of London and the Future, by Benjamin</p>
+        <p>March 04, 2020</p>
+        <p>Award　Malaya, a second grade student, won the Silver Prize at the London Speech Contest</p>
+        <p>March 01, 2020</p>
+        <p>Entrance Examination　The application deadline for our entrance examination is imminent</p>
+        <p>February 29, 2020</p>
+        <p>Others　This year is a leap year</p>
+        <p>February 26, 2020</p>
+        <p>Event　About implement campus cleaning</p>
+        <p>February 24, 2020</p>
+        <p>Award　Our school won the London Best International School Award 2019</p>
+        <p>February 24, 2020</p>
+        <p>Others　About health care</p>
+      </div>
+      <div class="content">
+        <h3>Click here for our school</h3>
+        <p>Introduction of the school, club activities, annual events, etc.</p>
+        <h3>Click here for our education</h3>
+        <p>Introduction of the school's educational program</p>
+        <h3>Click here for our facility</h3>
+        <p>Introduction of the specialty facilities</p>
+        <h3>Click here for our entrance examination</h3>
+        <p>Introduction of the entrance examination method, entrance examination conditions, etc.</p>
+        <h3>Click here for our access</h3>
+        <p>Introduction of the access from City of London, airport</p>
+      </div>
+    </main>
     <!--フッター-->
     <footer class="page-footer"></footer>
 </body>
